crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-alerts_by_prefix_bob.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
"GraphQL query failed with error: GraphQL errors: [ServerError { message: \"PermissionDenied: user@example.com is not authorized to access prefix or name 'bobCo/' with required capability read\", locations: [Pos(4:5)], path: [Field(\"alerts\")], extensions: None }]"
