crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-alerts_by_prefix_bob_started_at_earlier.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
"GraphQL query failed with error: GraphQL errors: [ServerError { message: \"user is not authorized to bobCo/\", locations: [Pos(4:5)], path: [Field(\"alerts\")], extensions: None }]"
