crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-live_spec_alert_history.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
{
  "liveSpecs": {
    "edges": [
      {
        "node": {
          "activeAlerts": [
            {
              "alertType": "shard_failed",
              "firedAt": "2024-08-09T12:26:12+00:00",
              "resolvedAt": null
            }
          ],
          "allAlerts": {
            "edges": [
              {
                "cursor": "2024-08-09T11:41:12+00:00;auto_discover_failed;aliceCo/shared/capture",
                "node": {
                  "alertType": "auto_discover_failed",
                  "firedAt": "2024-08-09T11:41:12+00:00",
                  "resolvedAt": "2024-08-09T12:11:12+00:00"
                }
              },
              {
                "cursor": "2024-08-09T10:56:12+00:00;shard_failed;aliceCo/shared/capture",
                "node": {
                  "alertType": "shard_failed",
                  "firedAt": "2024-08-09T10:56:12+00:00",
                  "resolvedAt": "2024-08-09T11:26:12+00:00"
                }
              },
              {
                "cursor": "2024-08-09T10:11:12+00:00;auto_discover_failed;aliceCo/shared/capture",
                "node": {
                  "alertType": "auto_discover_failed",
                  "firedAt": "2024-08-09T10:11:12+00:00",
                  "resolvedAt": "2024-08-09T10:41:12+00:00"
                }
              }
            ],
            "pageInfo": {
              "hasNextPage": false,
              "hasPreviousPage": false
            }
          },
          "catalogName": "aliceCo/shared/capture",
          "oneAlert": {
            "edges": [
              {
                "cursor": "2024-08-09T10:56:12+00:00;shard_failed;aliceCo/shared/capture",
                "node": {
                  "alertType": "shard_failed",
                  "firedAt": "2024-08-09T10:56:12+00:00",
                  "resolvedAt": "2024-08-09T11:26:12+00:00"
                }
              }
            ],
            "pageInfo": {
              "hasNextPage": false,
              "hasPreviousPage": true
            }
          }
        }
      },
      {
        "node": {
          "activeAlerts": [],
          "allAlerts": {
            "edges": [],
            "pageInfo": {
              "hasNextPage": false,
              "hasPreviousPage": false
            }
          },
          "catalogName": "aliceCo/shared/disabled",
          "oneAlert": {
            "edges": [],
            "pageInfo": {
              "hasNextPage": false,
              "hasPreviousPage": false
            }
          }
        }
      }
    ]
  }
}
