crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-live_specs_basic.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
{
  "liveSpecs": {
    "edges": [
      {
        "cursor": "aliceCo/shared/a",
        "node": {
          "catalogName": "aliceCo/shared/a",
          "liveSpec": {
            "readBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/materialize",
                  "node": {
                    "catalogName": "aliceCo/shared/materialize",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          }
                        ]
                      },
                      "writesTo": null,
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            },
            "readsFrom": null,
            "writesTo": null,
            "writtenBy": {
              "edges": [
                {
                  "cursor": "aliceCo/private/capture",
                  "node": {
                    "catalogName": "aliceCo/private/capture",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": null,
                      "writesTo": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          }
                        ]
                      },
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                },
                {
                  "cursor": "aliceCo/shared/capture",
                  "node": {
                    "catalogName": "aliceCo/shared/capture",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": null,
                      "writesTo": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          }
                        ]
                      },
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            }
          },
          "userCapability": "admin"
        }
      },
      {
        "cursor": "aliceCo/shared/b",
        "node": {
          "catalogName": "aliceCo/shared/b",
          "liveSpec": {
            "readBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/materialize",
                  "node": {
                    "catalogName": "aliceCo/shared/materialize",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          }
                        ]
                      },
                      "writesTo": null,
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            },
            "readsFrom": null,
            "writesTo": null,
            "writtenBy": {
              "edges": [
                {
                  "cursor": "aliceCo/private/capture",
                  "node": {
                    "catalogName": "aliceCo/private/capture",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": null,
                      "writesTo": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          }
                        ]
                      },
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                },
                {
                  "cursor": "aliceCo/shared/capture",
                  "node": {
                    "catalogName": "aliceCo/shared/capture",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": null,
                      "writesTo": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          }
                        ]
                      },
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            }
          },
          "userCapability": "admin"
        }
      },
      {
        "cursor": "aliceCo/shared/c",
        "node": {
          "catalogName": "aliceCo/shared/c",
          "liveSpec": {
            "readBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/materialize",
                  "node": {
                    "catalogName": "aliceCo/shared/materialize",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          }
                        ]
                      },
                      "writesTo": null,
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            },
            "readsFrom": null,
            "writesTo": null,
            "writtenBy": {
              "edges": [
                {
                  "cursor": "aliceCo/private/capture",
                  "node": {
                    "catalogName": "aliceCo/private/capture",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": null,
                      "writesTo": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          }
                        ]
                      },
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                },
                {
                  "cursor": "aliceCo/shared/capture",
                  "node": {
                    "catalogName": "aliceCo/shared/capture",
                    "liveSpec": {
                      "readBy": null,
                      "readsFrom": null,
                      "writesTo": {
                        "edges": [
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/a",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/b",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          },
                          {
                            "node": {
                              "catalogName": "aliceCo/shared/c",
                              "status": {
                                "type": "OK"
                              },
                              "userCapability": "admin"
                            }
                          }
                        ]
                      },
                      "writtenBy": null
                    },
                    "status": {
                      "type": "WARNING"
                    },
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false
              }
            }
          },
          "userCapability": "admin"
        }
      }
    ]
  }
}
