crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-live_specs_by_name_alice_future_started_at.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
{
  "liveSpecs": {
    "edges": [
      {
        "node": {
          "activeAlerts": [],
          "alertHistory": {
            "edges": [
              {
                "node": {
                  "firedAt": "2024-08-09T11:41:12+00:00"
                }
              },
              {
                "node": {
                  "firedAt": "2024-08-09T10:56:12+00:00"
                }
              },
              {
                "node": {
                  "firedAt": "2024-08-09T10:11:12+00:00"
                }
              }
            ]
          },
          "catalogName": "aliceCo/private/capture",
          "liveSpec": {
            "isDisabled": false,
            "model": {
              "bindings": [
                {
                  "resource": {
                    "_meta": {
                      "path": [
                        "a"
                      ]
                    },
                    "id": "a"
                  },
                  "target": "aliceCo/shared/a"
                },
                {
                  "resource": {
                    "_meta": {
                      "path": [
                        "b"
                      ]
                    },
                    "id": "b"
                  },
                  "target": "aliceCo/shared/b"
                },
                {
                  "resource": {
                    "_meta": {
                      "path": [
                        "c"
                      ]
                    },
                    "id": "c"
                  },
                  "target": "aliceCo/shared/c"
                }
              ],
              "endpoint": {
                "connector": {
                  "config": {},
                  "image": "source/test:test"
                }
              }
            }
          },
          "status": {
            "summary": "waiting for task shards to be ready"
          },
          "userCapability": "admin"
        }
      }
    ]
  }
}
