crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-live_specs_by_name_bob.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
"GraphQL query failed with error: GraphQL errors: [ServerError { message: \"PermissionDenied: user@example.com is not authorized to access prefix or name 'bobCo/private/materialization' with required capability CatalogRead\", locations: [Pos(5:5)], path: [Field(\"liveSpecs\")], extensions: None }]"
