crates/agent/src/integration_tests/graphql/queries/snapshots/agent__integration_tests__graphql__queries__alice-live_specs_connections_forward.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: alice_result
---
{
  "liveSpecs": {
    "edges": [
      {
        "cursor": "aliceCo/shared/capture",
        "node": {
          "catalogName": "aliceCo/shared/capture",
          "liveSpec": {
            "readsFrom": null,
            "writesTo": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/c",
                  "node": {
                    "catalogName": "aliceCo/shared/c",
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false,
                "hasPreviousPage": true
              }
            }
          },
          "userCapability": "admin"
        }
      },
      {
        "cursor": "aliceCo/shared/materialize",
        "node": {
          "catalogName": "aliceCo/shared/materialize",
          "liveSpec": {
            "readsFrom": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/b",
                  "node": {
                    "catalogName": "aliceCo/shared/b",
                    "userCapability": "admin"
                  }
                },
                {
                  "cursor": "aliceCo/shared/c",
                  "node": {
                    "catalogName": "aliceCo/shared/c",
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false,
                "hasPreviousPage": true
              }
            },
            "writesTo": null
          },
          "userCapability": "admin"
        }
      }
    ]
  }
}
